--- a/index.html
+++ b/index.html
@@ -1985,7 +1985,7 @@
                 
                 <!-- Grade de Ferramentas Principais -->
                 <div class="tools-grid">
-                    <a href="https://www.brasilcard.net" id="hunter-card-link" class="tool-item">
+                    <a href="https://www.brasilcard.net/bca/lojista/login" id="hunter-card-link" class="tool-item">
                         <div class="tool-icon-wrapper"><i class="fa-solid fa-id-card"></i></div>
                         <span>Hunter Card</span>
                     </a>
@@ -3112,7 +3112,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '1.7.3'; // Altere este número para atualizar a versão
+    const APP_VERSION = '1.7.4'; // Altere este número para atualizar a versão
 
     // Sua configuração do Firebase
     const firebaseConfig = {
